force-app/main/default/objects/Account/fields/MaxAmountOfOpportunity__c.field-meta.xml
<CustomField>
    <fullName>MaxAmountOfOpportunity__c</fullName>
    <label>MaxAmountOfOpportunity</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>