force-app/main/default/objects/Account/fields/NumberOfOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpportunities__c</fullName>
    <label>NumberOfOpportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>