force-app/main/default/objects/Account/fields/NumOfClosedWon__c.field-meta.xml
<CustomField>
    <fullName>NumOfClosedWon__c</fullName>
    <label>NumOfClosedWon</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>