force-app/main/default/objects/Account/validationRules/IndustryField.validationRule-meta.xml
<ValidationRule>
    <fullName>IndustryField</fullName>
    <active>true</active>
    <description>When a user creates &apos;Industry&apos; field as &apos;Agriculture&apos;, &apos;Ownership&apos; field cannot be &apos;Public&apos;</description>
    <errorConditionFormula>IF( TEXT( Industry ) = &apos;Agriculture&apos;, TEXT(  Ownership  ) = &apos;Public&apos;, false)</errorConditionFormula>
    <errorDisplayField>Ownership</errorDisplayField>
    <errorMessage>When  &apos;Industry&apos; field is &apos;Agriculture&apos;, &apos;Ownership&apos; field cannot be &apos;Public&apos;</errorMessage>
</ValidationRule>